--- a/app/Resources/views/article/search.html.twig
+++ b/app/Resources/views/article/search.html.twig
@@ -43,7 +43,9 @@
                                     <div class="blog-excerpt-inner">
                                         <h5 class="meta-post">{{ article.categories.name }}</h5>
                                         <h2>{{ article.title }}</h2>
-                                        <p></p>
+                                        {% if loop.index != 1 and loop.index != 4 and loop.index != 9 %}
+                                            <p>{{ article.description | striptags }}</p>
+                                        {% endif %}
                                     </div><!-- blog-excerpt-inner -->
                                 </div><!-- blog-excerpt -->
                             </a>
@@ -52,12 +54,12 @@
 
                     <div class="shuffle-sizer three"></div>
                 </div><!-- grid-items -->
-                <div id="pagination">
-                    <ul class="clear-after reset plain">
-                        <li id="older" class="pagination-nav"><a href="#" class="button transparent aqua"><i class="fa fa-chevron-left"></i><span class="label">Пред</span></a></li>
-                        <li id="newer" class="pagination-nav"><a href="#" class="button transparent aqua"><span class="label">След</span><i class="fa fa-chevron-right"></i></a></li>
-                    </ul>
-                </div>
+                {#<div id="pagination">#}
+                    {#<ul class="clear-after reset plain">#}
+                        {#<li id="older" class="pagination-nav"><a href="#" class="button transparent aqua"><i class="fa fa-chevron-left"></i><span class="label">Пред</span></a></li>#}
+                        {#<li id="newer" class="pagination-nav"><a href="#" class="button transparent aqua"><span class="label">След</span><i class="fa fa-chevron-right"></i></a></li>#}
+                    {#</ul>#}
+                {#</div>#}
             </div><!-- row-content -->
         </div><!-- row -->
     </main><!-- main -->
