--- a/app/Resources/views/admin/all_articles.html.twig
+++ b/app/Resources/views/admin/all_articles.html.twig
@@ -5,9 +5,9 @@
 
     <table class="table table-hover">
         <thead>
-        <th>#</th>
-        <th width="80%">Заголовок</th>
-        <th>Опції</th>
+        <th width="10%">#</th>
+        <th width="40%">Заголовок</th>
+        <th width="30%">Опції</th>
         </thead>
         <tbody>
         {% for article in articles %}
@@ -15,7 +15,7 @@
                 <td>{{ article.id }}</td>
                 <td>{{ article.title }}</td>
                 <td>
-                    <a href="{{ path('article', {"slug": article.slug}) }}" class="btn btn-default">View</a>
+                    <a href="{{ path('article', {"slug": article.slug}) }}" class="btn btn-default">Переглянути</a>
                     <a href="{{ path('edit_article', {"id": article.id}) }}" class="btn btn-default">Редагувати</a>
                     <a href="{{ path('delete_article', {"id": article.id}) }}" class="btn btn-danger">Видалити</a>
                 </td>
