--- a/app/Resources/views/admin/all_categories.html.twig
+++ b/app/Resources/views/admin/all_categories.html.twig
@@ -5,9 +5,9 @@
 
     <table class="table table-hover">
         <thead>
-        <th>#</th>
-        <th>Назва</th>
-        <th>Опції</th>
+        <th width="5%">#</th>
+        <th width="40%">Заголовок</th>
+        <th width="30%">Опції</th>
         </thead>
         <tbody>
         {% for category in categories %}
@@ -15,7 +15,9 @@
                 <td>{{ category.id }}</td>
                 <td>{{ category.name }}</td>
                 <td>
+                    <a href="{{ path('category', {"slug": category.slug}) }}" class="btn btn-default">Переглянути</a>
                     <a href="{{ path('edit_category', {"id" : category.id}) }}" class="btn btn-default">Редагувати</a>
+                    <a href="{{ path('delete_category', {"id": category.id}) }}" class="btn btn-danger">Видалити</a>
                     {#<a href="#" class="btn btn-danger">Delete</a>#}
                 </td>
             </tr>
