--- a/app/Resources/views/admin/all_pages.html.twig
+++ b/app/Resources/views/admin/all_pages.html.twig
@@ -5,9 +5,9 @@
 
     <table class="table table-hover">
         <thead>
-        <th>#</th>
-        <th>Заголовок</th>
-        <th>Опції</th>
+        <th width="5%">#</th>
+        <th width="40%">Заголовок</th>
+        <th width="30%">Опції</th>
         </thead>
         <tbody>
         {% for page in pages %}
@@ -15,8 +15,9 @@
                 <td>{{ page.id }}</td>
                 <td>{{ page.title }}</td>
                 <td>
+                    <a href="{{ path('page', {"slug": page.slug}) }}" class="btn btn-default">Переглянути</a>
                     <a href="{{ path('edit_page', {"id" : page.id}) }}" class="btn btn-default">Редагувати</a>
-                    {#<a href="#" class="btn btn-danger">Delete</a>#}
+                    <a href="{{ path('delete_page', {"id": page.id}) }}" class="btn btn-danger">Видалити</a>
                 </td>
             </tr>
         {% endfor %}
