--- a/app/Resources/views/page/index.html.twig
+++ b/app/Resources/views/page/index.html.twig
@@ -4,6 +4,16 @@
 
 {% block content %}
     <main role="main">
+        <div id="intro-wrap" class="full-height">
+            <div id="intro" class="preload darken more-button">
+                <div class="intro-item" style="background-image: url({{ article.image }});">
+                    {#<div class="photocaption">#}
+                    {#<h4>Photography by <a href="vk.com/awaylastdays">Vadim Bryklia</a></h4>#}
+                    {#</div><!-- photocaption -->#}
+                </div>
+            </div><!-- intro -->
+        </div><!-- intro-wrap -->
+
         <div id="main" class="row">
             <div class="row-content buffer-left buffer-right buffer-bottom clear-after">
                 <div class="post-area clear-after">
@@ -21,6 +31,7 @@
                                 <input type="text" placeholder="Поиск" name="text" value="" class="plain buffer">
                             </form>
                         </div>
+
                         <div class="widget">
                             <h4>Рубрики</h4>
                             <ul class="plain">
@@ -30,7 +41,19 @@
                             </ul>
                         </div>
                     </aside>
+
                 </div><!-- post-area -->
+
+                <script type="text/javascript">(function() {
+                        if (window.pluso)if (typeof window.pluso.start == "function") return;
+                        if (window.ifpluso==undefined) { window.ifpluso = 1;
+                            var d = document, s = d.createElement('script'), g = 'getElementsByTagName';
+                            s.type = 'text/javascript'; s.charset='UTF-8'; s.async = true;
+                            s.src = ('https:' == window.location.protocol ? 'https' : 'http')  + '://share.pluso.ru/pluso-like.js';
+                            var h=d[g]('body')[0];
+                            h.appendChild(s);
+                        }})();</script>
+                <div class="pluso" data-background="#ebebeb" data-options="big,square,line,horizontal,counter,theme=04" data-services="vkontakte,facebook,twitter,google"></div>
 
                 <div class="related clear-after">
                     <h4>Последнии публикации</h4>
@@ -47,7 +70,8 @@
                         </div>
                     {% endfor %}
                 </div>
-            </div><!-- row-content -->
+
+                </div><!-- row-content -->
         </div><!-- row -->
     </main><!-- main -->
 {% endblock content %}
