--- a/web/css/style-frontend.css
+++ b/web/css/style-frontend.css
@@ -5235,3 +5235,7 @@ footer .row-content.buffer {
     width: 100%;
     max-width: 100%;
 }
+
+ul.categories .sub-category {
+    /*padding-left: 20px;*/
+}
